--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
        </li>
        <li><a href="https://internship.zuri.team">Zuri/14G Internship 2021.</a>
           <br />
-         <img src="../Stage-2/zuri-logo.png" alt="Zuri logo" />
+         <img src="zuri-logo.png" alt="Zuri logo" />
          <h4>Intern</h4>
        </li>
     </ul>
