--- a/index.html
+++ b/index.html
@@ -16,18 +16,14 @@
 <body>
   
   <h1>Peters Divine Agbenu.</h1>
-     <p id="P1">No.7 cubana street Abuja,Nigeria. || <a id="tel" href="tel:07013396021">+234-7013396021.</a> || <a id="email" href="mailto:petersfamily007@gmail.com">petersdivine007@gmail.com</a></p>
+     <p id="P1">No.7 cocin church street Abuja,Nigeria. || <a id="tel" href="tel:07013396021">+234-7013396021.</a> || <a id="email" href="mailto:petersfamily007@gmail.com">petersdivine007@gmail.com</a></p>
        <hr />
   <h2>Career Objective:</h2> 
-     <p>Senior web-developer with 5+ years experience working for Google. Possesses a MSC, impeccable written and verbal communication skills,and excellent interpersonal skills.  </p>
+     <p>Computer science student of Federal University of Lafia, presently in 200level, impeccable written and verbal communication skills,and excellent interpersonal skills.  </p>
   <h2>Professional Experience:</h2>
      <ul>
-       <li>Google.
-        <h4>Senior developer[2024 - Present]</h4>
-       </li>
        <li>
-         Microsoft.
-        <h4>Junior developer[2022]</h4>
+        <h4>None</h4>
        </li>
        <li><a href="https://internship.zuri.team">Zuri/14G Internship 2021.</a>
           <br />
@@ -43,8 +39,8 @@
          </ul>
   <h2> Additonal Skills:</h2>
     <ul>
-      <li>Bilingual in Spanish and English.</li>
-      <li>Expert in Adobe illustrator CS5.</li>
+      <li>Fashion designer.</li>
+      <li>Artist.</li>
     </ul>
      
      
