--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
   <h2>Professional Experience:</h2>
      <ul>
        <li>
-        <h4>None</h4>
+        <h4>Student at:</h4>
+       <li><a href=" https://join.slack.com/t/kodecamp/shared_invite/zt-u931bo68-fPMv64MLsC00bsEQL1mMsw ">KodeCamp.</a>
        </li>
        <li><a href="https://internship.zuri.team">Zuri/14G Internship 2021.</a>
           <br />
@@ -41,6 +42,12 @@
     <ul>
       <li>Fashion designer.</li>
       <li>Artist.</li>
+    </ul>
+  <h2> Skills and Abilities:</h2>
+    <ul>
+      <li>HTML:70%</li>
+      <li>CSS:70%</li>
+      <li>JavaScript:60%</li>
     </ul>
      
      
